--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,4 @@
 RewriteEngine On
-
-Options All -Indexes
-IndexIgnore *
-
-RewriteCond $1 !^(index\.php|img|js|css|favicon\.png)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ ./index.php/$1 [L]
+RewriteRule ^(.*)$ index.php/$1 [L]
